@@ -23,6 +23,9 @@
 /* the lcd ctrl fifo */
 static int lcd_ctrl_fd = -1;
 
+/* for global signal handler */
+sigset_t mask;
+
 extern char *__progname;
 
 static void
@@ -98,6 +101,44 @@ static void clear_lcd(void)
 
 	req.cmd = 1 << LCD_CLEAR;
 	(void) write(lcd_ctrl_fd, &req, len); /* ignore error */
+}
+
+/* the signal handler thread */
+void *
+signal_handler(__attribute__((__unused__)) void *args)
+{
+	int sig = EINVAL;
+	int err = -1;
+	for (;;) {
+		err = sigwait(&mask, &sig);
+		if (err != 0) {
+			syslog(LOG_ERR, "sigwait() != 0");
+			eprintf("sigwait() != 0 \n");
+		}
+
+		switch(sig) {
+		case SIGTERM:
+			syslog(LOG_INFO, "catched signal \"%s\" (%d) -> exit now ",
+				strsignal(sig), sig);
+			printf("catched signal \"%s\" (%d) -> exit now ",
+				strsignal(sig), sig);
+			exit(EXIT_SUCCESS);
+			break;
+		case SIGHUP:
+			syslog(LOG_INFO,"signal \"%s\" (%d) -> ignore it",
+				strsignal(sig), sig);
+			printf("signal \"%s\" (%d) -> ignore it",
+				strsignal(sig), sig);
+			break;
+		default:
+			syslog(LOG_INFO,"unhandled signal \"%s\" (%d)",
+				strsignal(sig), sig);
+			printf("unhandled signal \"%s\" (%d)",
+				strsignal(sig), sig);
+		}
+	}
+
+	return NULL;
 }
 
 /* the main thread */
@@ -187,6 +228,22 @@ int main(int argc, char *argv[])
 	if (err != 0)
 		exit(EXIT_FAILURE);
 
+	sigfillset(&mask);
+	err = pthread_sigmask(SIG_BLOCK, &mask, NULL);
+	if (err != 0) {
+		syslog(LOG_ERR, "can't set sigmask");
+		eprintf("can't set sigmask\n");
+		exit(EXIT_FAILURE);
+	}
+
+	static pthread_t tid_sig;
+	err = pthread_create(&tid_sig, NULL, signal_handler, NULL);
+	if (err != 0) {
+		syslog(LOG_ERR, "can't create thread");
+		eprintf("can't create thread\n");
+		exit(EXIT_FAILURE);
+	}
+
 	init_pins();
 
 	err = init_lcd();
@@ -205,5 +262,7 @@ int main(int argc, char *argv[])
 	puts("daemon is up and running");
 
 	(void) pthread_join(tid, NULL);
+	(void) pthread_join(tid_sig, NULL);
+
 	return EXIT_SUCCESS;
 }
