@@ -64,6 +64,9 @@ static int dummy_fd = -1; /* not used */
 
 static unsigned char actual_num_threads;
 
+/* for global signal handler */
+sigset_t mask;
+
 extern char *__progname;
 
 /* common functions */
@@ -388,6 +391,44 @@ int init_sensor_hub(char *adapter, unsigned char addr)
 	return 0;
 }
 
+/* the signal handler thread */
+void *
+signal_handler(__attribute__((__unused__)) void *args)
+{
+	int sig = EINVAL;
+	int err = -1;
+	for (;;) {
+		err = sigwait(&mask, &sig);
+		if (err != 0) {
+			syslog(LOG_ERR, "sigwait() != 0");
+			eprintf("sigwait() != 0 \n");
+		}
+
+		switch(sig) {
+		case SIGTERM:
+			syslog(LOG_INFO, "catched signal \"%s\" (%d) -> exit now ",
+				strsignal(sig), sig);
+			printf("catched signal \"%s\" (%d) -> exit now ",
+				strsignal(sig), sig);
+			exit(EXIT_SUCCESS);
+			break;
+		case SIGHUP:
+			syslog(LOG_INFO,"signal \"%s\" (%d) -> ignore it",
+				strsignal(sig), sig);
+			printf("signal \"%s\" (%d) -> ignore it",
+				strsignal(sig), sig);
+			break;
+		default:
+			syslog(LOG_INFO,"unhandled signal \"%s\" (%d)",
+				strsignal(sig), sig);
+			printf("unhandled signal \"%s\" (%d)",
+				strsignal(sig), sig);
+		}
+	}
+
+	return NULL;
+}
+
 /* the sensor read thread */
 void * read_sensor(__attribute__((__unused__)) void *arg)
 {
@@ -533,6 +574,22 @@ int main(int argc, char *argv[])
 	else
 		lock_file_handling();
 
+	sigfillset(&mask);
+	err = pthread_sigmask(SIG_BLOCK, &mask, NULL);
+	if (err != 0) {
+		syslog(LOG_ERR, "can't set sigmask");
+		eprintf("can't set sigmask\n");
+		exit(EXIT_FAILURE);
+	}
+
+	static pthread_t tid_sig;
+	err = pthread_create(&tid_sig, NULL, signal_handler, NULL);
+	if (err != 0) {
+		syslog(LOG_ERR, "can't create thread");
+		eprintf("can't create thread\n");
+		exit(EXIT_FAILURE);
+	}
+
 	err = init_sensor_hub(adapter, addr);
 	if (err < 0) {
 		syslog(LOG_ERR, "can't init sensor hub");
@@ -609,6 +666,8 @@ int main(int argc, char *argv[])
 
 		memset(&req, 0, len);
 	}
+
+	(void) pthread_join(tid_sig, NULL);
 
 	return EXIT_SUCCESS;
 }
